tests/eu.numberfour.n4js.expectmatrix.tests/xpect-tests/builtin_js/error/error_toString.n4js.xt
/* XPECT_SETUP eu.numberfour.n4js.expectmatrix.tests.N4JSExpectMatrixPendingTest END_SETUP */

// Error.toString()
// Source: https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Error/toString

var e = new Error("fatal error");
console.log(e.toString()); // "Error: fatal error"

e.name = undefined;
console.log(e.toString()); // "Error: fatal error"

e.name = "";
console.log(e.toString()); // "fatal error"

e.name = "Error";
e.message = undefined;
console.log(e.toString()); // "Error"

e.name = "hello";
console.log(e.toString()); // "hello"

/* XPECT output --- 
<==
stdout:
Error: fatal error
Error: fatal error
fatal error
Error
hello
stderr:
==>
--- */
